--- a/apps/frontend/src/app/About/Contributors/Contributors.module.scss
+++ b/apps/frontend/src/app/About/Contributors/Contributors.module.scss
@@ -16,12 +16,14 @@ h3 {
 	font-size: 24px;
     margin-top: 1rem;
 	margin-bottom: 1rem;
+	color: var(--heading-color);
 }
 
 h6 {
     font-size: 16px;
 	margin-top: 2rem;
 	margin-bottom: 1rem;
+	color: var(--heading-color);
 }
 
 .contributorCard {
@@ -67,6 +69,38 @@ h6 {
 		}
 	}
 
+	.contributorCardBody {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+		gap: 5px;
+		.bio {
+			p {
+				color: var(--heading-color);
+			}
+			.role {
+				font-size: 14px;
+				word-wrap: normal;
+				color: var(--paragraph-color);
+			}
+		}
+		.links {
+			svg {
+				width: 22px;
+				height: 21px;
+				padding: 2px;
+				transition: 0.2s;
+				border-radius: 4px;
+				margin-bottom: 2px;
+				color: var(--paragraph-color);
+				&:hover {
+					background-color: var(--foreground-color);
+				}
+			}
+		}
+	}
+
 	.name {
 		display: flex;
 		flex-direction: row;
@@ -76,28 +110,5 @@ h6 {
 		width: 100%;
 		margin-bottom: 3px;
 
-		p {
-			// font-weight: 500;
-			color: var(--heading-color);
-		}
-
-		svg {
-			width: 22px;
-			height: 21px;
-			padding: 2px;
-			transition: 0.2s;
-			border-radius: 4px;
-			margin-bottom: 2px;
-
-			&:hover {
-				background-color: var(--background-color);
-			}
-		}
-	}
-
-	.role {
-		font-size: 14px;
-		word-wrap: normal;
-		color: var(--paragraph-color);
 	}
 }
